@@ -1,3 +1,7 @@
+Tue Jun  8 16:52:35 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* regex.c (read_special): get rid of overrun.
+
 Tue Jun  8 16:51:48 2010  Shugo Maeda  <shugo@ruby-lang.org>
 
 	* lib/net/imap.rb: backported exception handling from trunk.
